{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 26,
  "lineage": "29d6b870-96a3-d7d6-26d8-6dbb937c3bb7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0085fdb96c2abd057",
            "domain": "vpc",
            "id": "eipalloc-0085fdb96c2abd057",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-22-23-109.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.23.109",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Supportteam-nat-eip",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-nat-eip",
              "project": "Supportteam"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:811715053301:instance/i-03bfc9c6ffe48fe57",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03bfc9c6ffe48fe57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fabbb6c82f30454b",
            "private_dns": "ip-172-17-122-210.us-east-2.compute.internal",
            "private_ip": "172.17.122.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e8bc4952af34a26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e64216a64bf4e2c",
            "tags": {
              "Name": "Supportteam-backend",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-backend",
              "project": "Supportteam"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e7d9e1f650c61880"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.backend",
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "aws_subnet.private1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:811715053301:instance/i-0f1d5a7d6d97c6727",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f1d5a7d6d97c6727",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0904b7388099bb13f",
            "private_dns": "ip-172-17-49-19.us-east-2.compute.internal",
            "private_ip": "172.17.49.19",
            "public_dns": "ec2-3-128-90-89.us-east-2.compute.amazonaws.com",
            "public_ip": "3.128.90.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9d3db01f6f6789b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f11a0db5cc2d31a",
            "tags": {
              "Name": "Supportteam-bastion",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-bastion",
              "project": "Supportteam"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dd40d8e5efc5e36a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.bastion",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:811715053301:instance/i-021fe9160d42aafd3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021fe9160d42aafd3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0445964f5d863fffa",
            "private_dns": "ip-172-17-8-100.us-east-2.compute.internal",
            "private_ip": "172.17.8.100",
            "public_dns": "ec2-18-117-159-219.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.159.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058ddadfbfa2fb7d2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01872a791125b7f1f",
            "tags": {
              "Name": "Supportteam-frontend",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-frontend",
              "project": "Supportteam"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ac577b9b46cce410"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:internet-gateway/igw-07bcb37d7f04926ca",
            "id": "igw-07bcb37d7f04926ca",
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-igw",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-igw",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0085fdb96c2abd057",
            "connectivity_type": "public",
            "id": "nat-04d2b439c577fd144",
            "network_interface_id": "eni-04ebfa06b58b94195",
            "private_ip": "172.17.63.15",
            "public_ip": "3.22.23.109",
            "subnet_id": "subnet-05f11a0db5cc2d31a",
            "tags": {
              "Name": "Supportteam-nat",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-nat",
              "project": "Supportteam"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:route-table/rtb-047275df8509aff26",
            "id": "rtb-047275df8509aff26",
            "owner_id": "811715053301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04d2b439c577fd144",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Supportteam-route-private",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-route-private",
              "project": "Supportteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:route-table/rtb-0811442477aaf749f",
            "id": "rtb-0811442477aaf749f",
            "owner_id": "811715053301",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07bcb37d7f04926ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Supportteam-route-public",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-route-public",
              "project": "Supportteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f8d049c902e392a",
            "route_table_id": "rtb-047275df8509aff26",
            "subnet_id": "subnet-06e64216a64bf4e2c"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54d06101da9ab88",
            "route_table_id": "rtb-047275df8509aff26",
            "subnet_id": "subnet-0b3e77bc91a11fff7"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private2",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0515af3c64412b2c4",
            "route_table_id": "rtb-047275df8509aff26",
            "subnet_id": "subnet-0423d53ebdbb3c709"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private3",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03026c660e59e4a67",
            "route_table_id": "rtb-0811442477aaf749f",
            "subnet_id": "subnet-01872a791125b7f1f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f5fbd71accd2576",
            "route_table_id": "rtb-0811442477aaf749f",
            "subnet_id": "subnet-05f11a0db5cc2d31a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0620da7047dc61cbc",
            "route_table_id": "rtb-0811442477aaf749f",
            "subnet_id": "subnet-0938c74e729a94169"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public3",
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:security-group/sg-0e7d9e1f650c61880",
            "description": "Allows 3306 from frontend,22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7d9e1f650c61880",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd40d8e5efc5e36a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ac577b9b46cce410"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Supportteam-backend",
            "name_prefix": "",
            "owner_id": "811715053301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Supportteam-backend",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-backend",
              "project": "Supportteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.frontend",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:security-group/sg-0dd40d8e5efc5e36a",
            "description": "Allows 22 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd40d8e5efc5e36a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Supportteam-bastion",
            "name_prefix": "",
            "owner_id": "811715053301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Supportteam-bastion",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-bastion",
              "project": "Supportteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:security-group/sg-0ac577b9b46cce410",
            "description": "Allows 80 from all,22 from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ac577b9b46cce410",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd40d8e5efc5e36a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Supportteam-frontend",
            "name_prefix": "",
            "owner_id": "811715053301",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Supportteam-frontend",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-frontend",
              "project": "Supportteam"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:subnet/subnet-06e64216a64bf4e2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.96.0/19",
            "id": "subnet-06e64216a64bf4e2c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-private1",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-private1",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:subnet/subnet-0b3e77bc91a11fff7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.128.0/19",
            "id": "subnet-0b3e77bc91a11fff7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-private2",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-private2",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:subnet/subnet-0423d53ebdbb3c709",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.17.160.0/19",
            "id": "subnet-0423d53ebdbb3c709",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-private3",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-private3",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:subnet/subnet-01872a791125b7f1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/19",
            "id": "subnet-01872a791125b7f1f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-public1",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-public1",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:subnet/subnet-05f11a0db5cc2d31a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.32.0/19",
            "id": "subnet-05f11a0db5cc2d31a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-public2",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-public2",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:subnet/subnet-0938c74e729a94169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.17.64.0/19",
            "id": "subnet-0938c74e729a94169",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-public3",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-public3",
              "project": "Supportteam"
            },
            "vpc_id": "vpc-0d83cdccb38a09fc1"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:811715053301:vpc/vpc-0d83cdccb38a09fc1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0569af878b8a10b7a",
            "default_route_table_id": "rtb-0a3b231b045c523bb",
            "default_security_group_id": "sg-09af16a331a0f41cd",
            "dhcp_options_id": "dopt-08103a30ef3cb5597",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d83cdccb38a09fc1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a3b231b045c523bb",
            "owner_id": "811715053301",
            "tags": {
              "Name": "Supportteam-vpc",
              "project": "Supportteam"
            },
            "tags_all": {
              "Name": "Supportteam-vpc",
              "project": "Supportteam"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}